--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:gravity="right"
             android:hint="@string/str_Mobile_number"
+            android:focusable="true"
             android:phoneNumber="true"
             android:textColorHint="#afafaf"
             android:textSize="24sp" />
@@ -40,10 +41,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="80dp"
-        android:background="@drawable/bg_button"
+        android:background="@drawable/bg_button_disable"
         android:text="@string/str_Go"
         android:textColor="#000000"
         android:textSize="14sp"
+        android:clickable="false"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
