--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,19 +34,16 @@
             android:textSize="24sp" />
     </android.support.design.widget.TextInputLayout>
 
-    <Button
+
+
+    <include
         android:id="@+id/btn_sing_up"
-        android:layout_width="160dp"
+        layout="@layout/progress_bar_layout"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="80dp"
-        android:background="@drawable/bg_button_disable"
-        android:text="@string/str_Go"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:clickable="false"
-        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
